[gd_scene load_steps=4 format=3 uid="uid://b4lrjpgcc2sab"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_x0mab"]
[ext_resource type="Script" path="res://scripts/fancy_button.gd" id="2_8m034"]
[ext_resource type="Texture2D" uid="uid://o3wyifhtp3mo" path="res://assets/dungeon1.jpg" id="2_o71bk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x0mab")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.9
offset_left = 200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"
script = ExtResource("2_8m034")

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "LEVEL SELECT"
script = ExtResource("2_8m034")

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"
script = ExtResource("2_8m034")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_o71bk")
